--- a/sections/collections.liquid
+++ b/sections/collections.liquid
@@ -92,7 +92,7 @@
 
 <div class="bg-[#F6F0E4]">
     <div class="py-[64px] px-[25px] lg:p-[104px] max-w-[1280px] mx-auto">
-        <div class="flex flex-col gap-[24px] lg:gap-4">
+        <div class="flex flex-col gap-[24px]">
             <div class="flex flex-col lg:flex-row gap-[24px]">
                 <div
                     class="collection-c-1 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
